Fix ESLint errors for Railway deployment

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@railway/cli": "^4.12.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
